add endpoint /offline-since/devices
