# docs/swagger.yaml
@@ -23,27 +23,41 @@ definitions:
     type: object
   model.Duration:
     enum:
-    - 1
-    - 1000
-    - 1000000
-    - 1000000000
+    - -9223372036854775808
+    - 9223372036854775807
     - 1
     - 1000
     - 1000000
     - 1000000000
     - 60000000000
+    - 3600000000000
+    - -9223372036854775808
+    - 9223372036854775807
+    - 1
+    - 1000
+    - 1000000
+    - 1000000000
+    - 60000000000
+    - 3600000000000
     format: int64
     type: integer
     x-enum-varnames:
-    - Nanosecond
-    - Microsecond
-    - Millisecond
-    - Second
+    - minDuration
+    - maxDuration
     - Nanosecond
     - Microsecond
     - Millisecond
     - Second
     - Minute
+    - Hour
+    - minDuration
+    - maxDuration
+    - Nanosecond
+    - Microsecond
+    - Millisecond
+    - Second
+    - Minute
+    - Hour
   model.HistoricalStates:
     properties:
       next_state:
@@ -77,6 +91,15 @@ definitions:
         items:
           $ref: '#/definitions/model.State'
         type: array
+    type: object
+  model.OfflineSinceResponse:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      offline_since:
+        type: string
     type: object
   model.QueryHistorical:
     properties:
@@ -903,6 +926,48 @@ paths:
       summary: Intern check gateway online states
       tags:
       - Old api
+  /offline-since/devices:
+    post:
+      consumes:
+      - application/json
+      description: 'Query offline timestamps of devices with multiple IDs (supported:
+        devices, device-groups, locations). If no IDs are provided, all accessible
+        device IDs will be queried. Device-groups and locations will be resolved to
+        their device IDs.'
+      parameters:
+      - description: query object, attribute value and origin will only be checked
+          if set, otherwise all values or origins will be blacklisted
+        in: body
+        name: query
+        required: true
+        schema:
+          $ref: '#/definitions/model.QueryWithAttributeFilter'
+      - description: include device names in the response
+        in: query
+        name: include-names
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: offline timestamps by device IDs
+          schema:
+            items:
+              $ref: '#/definitions/model.OfflineSinceResponse'
+            type: array
+        "400":
+          description: error message
+          schema:
+            type: string
+        "500":
+          description: error message
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Query offline timestamps of devices
+      tags:
+      - Offline List
   /state/device/check:
     post:
       consumes:
